# lifecycle-mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md
project_management/: EXECUTION_GUIDELINES_MCP.md  PLANNING_GUIDELINES_MCP.md
src/lifecycle_mcp/: constants.py  database_manager.py  lifecycle-schema-v2.sql  lifecycle-schema.sql  locks.py  migrations.py  server.py
src/lifecycle_mcp/handlers/: __init__.py  architecture_handler.py  base_handler.py  export_handler.py  interview_handler.py  pattern_handler.py  project_handler.py  relationship_handler.py  requirement_handler.py  status_handler.py  task_handler.py  validation_handler.py
tests/: conftest.py  test_architecture_handler.py  test_base_handler.py  test_concurrency_regressions.py  test_concurrency_stress.py  test_constants.py  test_database_manager.py  test_export_handler.py  test_integration.py  test_interview_handler.py  test_locks.py  test_pattern_handler.py  test_performance_benchmarks.py  test_project_handler.py  test_property_based.py  test_relationship_handler.py  test_requirement_handler.py  test_schema.py  test_server_integration.py  test_status_handler.py  test_task_handler.py  test_task_handler_refactored.py  test_transport.py  test_transport_integration.py  test_validation_handler.py
